fix footer spacing issue , prepare to make the footer

--- a/fylo-landing-page-with-two-column-layout-master/src/output.css
+++ b/fylo-landing-page-with-two-column-layout-master/src/output.css
@@ -768,6 +768,12 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
+.space-y-0 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0px * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0px * var(--tw-space-y-reverse));
+}
+
 .rounded-md{
   border-radius: 0.375rem;
 }
@@ -866,6 +872,10 @@ video {
   padding: 0.5rem;
 }
 
+.p-0{
+  padding: 0px;
+}
+
 .px-20{
   padding-left: 5rem;
   padding-right: 5rem;
@@ -902,6 +912,22 @@ video {
 
 .pt-3{
   padding-top: 0.75rem;
+}
+
+.pb-0{
+  padding-bottom: 0px;
+}
+
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
+.pb-8{
+  padding-bottom: 2rem;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
 }
 
 .text-left{
